// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputV2 should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-unj39u-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.cache-unj39u-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.cache-unj39u-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-zm0rg0-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
  font-size: 14px;
}

.cache-zm0rg0-StyledInput[data-size='large'] {
  font-size: 16px;
}

.cache-pgps27-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
}

.cache-9kudic-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-9kudic-StyledIcon-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.cache-vdlwt8-StyledText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-4gfeok-StyledText e13y3mga0"
          for=":rk:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="cache-unj39u-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="true"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="true"
          class="cache-zm0rg0-StyledInput e7tir8v1"
          data-size="large"
          id=":rk:"
          type="text"
          value="test"
        />
        <div
          class="cache-pgps27-Stack-StateStack e7tir8v4"
        >
          <svg
            class="cache-9kudic-StyledIcon-sizeStyles e1gt4cfo0"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="cache-vdlwt8-StyledText e13y3mga0"
    >
      success
    </p>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-unj39u-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.cache-unj39u-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.cache-unj39u-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-zm0rg0-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
  font-size: 14px;
}

.cache-zm0rg0-StyledInput[data-size='large'] {
  font-size: 16px;
}

.cache-pgps27-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
}

.cache-x49ond-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-x49ond-StyledIcon-sizeStyles .fillStroke {
  stroke: #22674e;
  fill: none;
}

.cache-1n7fwv3-StyledText {
  color: #22674e;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-4gfeok-StyledText e13y3mga0"
          for=":rg:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="cache-unj39u-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="true"
      >
        <input
          aria-invalid="false"
          class="cache-zm0rg0-StyledInput e7tir8v1"
          data-size="large"
          id=":rg:"
          type="text"
          value="test"
        />
        <div
          class="cache-pgps27-Stack-StateStack e7tir8v4"
        >
          <svg
            class="cache-x49ond-StyledIcon-sizeStyles e1gt4cfo0"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14m3.844-8.791a.75.75 0 0 0-1.187-.918l-3.7 4.79-1.65-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="cache-1n7fwv3-StyledText e13y3mga0"
    >
      success
    </p>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-unj39u-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.cache-unj39u-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.cache-unj39u-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-zm0rg0-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
  font-size: 14px;
}

.cache-zm0rg0-StyledInput[data-size='large'] {
  font-size: 16px;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-4gfeok-StyledText e13y3mga0"
          for=":ra:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="cache-unj39u-StyledInputWrapper e7tir8v0"
        data-disabled="true"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="cache-zm0rg0-StyledInput e7tir8v1"
          data-size="large"
          disabled=""
          id=":ra:"
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-unj39u-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.cache-unj39u-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.cache-unj39u-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-zm0rg0-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
  font-size: 14px;
}

.cache-zm0rg0-StyledInput[data-size='large'] {
  font-size: 16px;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-4gfeok-StyledText e13y3mga0"
          for=":rd:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="cache-unj39u-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="true"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="cache-zm0rg0-StyledInput e7tir8v1"
          data-size="large"
          id=":rd:"
          readonly=""
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly with basic props 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-unj39u-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.cache-unj39u-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.cache-unj39u-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.cache-unj39u-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.cache-unj39u-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-zm0rg0-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
  font-size: 14px;
}

.cache-zm0rg0-StyledInput[data-size='large'] {
  font-size: 16px;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-4gfeok-StyledText e13y3mga0"
          for=":r0:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="cache-unj39u-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="cache-zm0rg0-StyledInput e7tir8v1"
          data-size="large"
          id=":r0:"
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
